Added documentation + tests
- Added detailed documentation to the README
- Added tests folder with tests to cover essential functions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dodgeball/trust-sdk-server",
-  "version": "0.0.9",
+  "version": "0.0.12",
   "description": "Dodgeball Server SDK",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -50,17 +50,26 @@
   "contributors": [
     "Patrick Teague"
   ],
+  "bugs": {
+    "url": "https://github.com/dodgeballhq/dodgeball-trust-sdk-node/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dodgeballhq/dodgeball-trust-sdk-node"
+  },
   "license": "ISC",
   "files": [
     "dist"
   ],
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "lodash.clonedeep": "^4.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@types/jest": "^27.0.1",
+    "@types/lodash.clonedeep": "^4.5.7",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
@@ -75,5 +84,25 @@
     "typescript": "^4.4.3",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0"
-  }
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.ts?$": "ts-jest"
+    },
+    "testRegex": "tests/.*|(\\.|/)(test|spec)\\.ts$",
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
+  },
+  "keywords": [
+    "dodgeball",
+    "security",
+    "trust and safety",
+    "risk",
+    "fraud prevention",
+    "api"
+  ]
 }
