--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
+/coverage
 
 # nyc test coverage
 .nyc_output
@@ -40,7 +41,7 @@ bower_components
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
-!.vscode/launch.json
+# !.vscode/launch.json
 !.vscode/extensions.json
 
 # misc
